0831 - 0930 Working and verifying Roaster tickets RO#3510, RO#3509, RO#3508, RO#3507 (0.98) 0930 - 1030 Working and verifying Roaster tickets RO#3510, RO#3315 (1) 1426 - 1515 Inspected and fixed scrolling Table layout issue (0.82) 1515 - 1610 Inspected and fixed cell alignment on Estate and MR order listing (0.92)

--- a/src/app/modules/order-management/order-list/order-list.component.scss
+++ b/src/app/modules/order-management/order-list/order-list.component.scss
@@ -22,4 +22,7 @@
     .custom-search {
         max-width: 320px;
     }
+    .custom-search.text-feild-width-fix {
+        min-width: 270px;
+    }
 }
